# balatro

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_dims.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/balatro/: __init__.py  calibrate.py  config.json  debug_assets.py  main.py  process_log.py  soul_farm.py
src/balatro/adapters/: __init__.py  config.py  input.py  ports.py  screen.py
src/balatro/domain/: __init__.py  decisions.py  exceptions.py  model.py
src/balatro/entrypoints/: __init__.py  cli.py
src/balatro/service_layer/: __init__.py  analytics.py  farming.py  scanning.py
src/tools/: capture_asset.py  check_dims.py  debug_assets.py  diagnose_scaling.py
tests/: fakes.py  test_decisions.py  test_domain_model.py  test_farming_actions.py  test_metrics_decision.py  test_process_log.py  test_scan_service.py
