[project]
name = "balatro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
]

[project.scripts]
soul_farm = "src.balatro.soul_farm:soul_farm"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"