[project]
name = "balatro"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
]

[project.scripts]
soul_farm = "balatro.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# (I)-> iSort, (F)->PyFlakes, (E,W)-> PyCodeStyle,(PL)->Pylint, (PT)->Pytest-style
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR0913', 'PLR2004']

[tool.ruff.format]
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
check = 'pre-commit run --all-files'
test = 'pytest -s -x --cov=src/balatro -vv'
post_test = 'coverage html'
